# admissions-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
alembic/: env.py
alembic/versions/: 20260716_0001_initial_ingestion_schema.py  __init__.py
app/: globals.css  layout.tsx  page.tsx
app/onboarding/: page.tsx
app/program/: page.tsx
app/targets/: page.tsx
app/transcript/: page.tsx
components/: app-provider.tsx  app-shell.tsx
components/dashboard/: advisor-panel.tsx  dashboard-view.tsx  email-modal.tsx  simulator-controls.tsx
components/ui/: index.tsx
config/institutions/: bellevue_college.yaml  seattle_university.yaml  uw_seattle.yaml
config/pathways/: pathways.yaml
data/: sample-policies.ts  sample-transcript.ts
docs/: BACKEND.md  GPT56_TODO.md  HANDOFF_ANDREW.md  TRANSCRIPT_PIPELINE.md  adding-an-institution.md  data-model.md  pipeline.md  safety-and-compliance.md  uw-adapter.md  uw-source-map.md
docs/equivalencies/: SOURCES.md
lib/: openai.ts  types.ts
lib/backend/: auth.ts  types.ts
lib/services/: index.ts  interfaces.ts  mock.ts
lib/supabase/: client.ts  database.types.ts  server.ts
lib/transcript/: extraction-schema.ts  normalizer.ts  pdf-validation.ts  pipeline.ts  process-document.ts  sample.ts  types.ts  validator.ts
lib/transfer/: client.ts  types.ts
scripts/: __init__.py  export_uw_records.py  ingest_uw_live.py  ingest_uw_sample.py  inspect_uw_sources.py
services/course-recommendation/: Dockerfile  README.md  pyproject.toml
services/course-recommendation/app/: __init__.py  eligibility.py  graph.py  main.py  models.py  repository.py  sample_data.py  scoring.py  service.py
services/course-recommendation/examples/: request.json  response.json
services/course-recommendation/tests/: conftest.py  test_api.py  test_eligibility.py  test_graph.py  test_recommendations.py  test_repository.py
services/transcript-parser/: Dockerfile  README.md  pyproject.toml
services/transcript-parser/app/: __init__.py  main.py  models.py
services/transcript-parser/app/parsers/: __init__.py  base.py  docling_parser.py  pymupdf_parser.py
src/academic_ingest/: __init__.py  observability.py  runtime.py
supabase/: combined_setup.sql  config.toml  schema.sql  seed.sql
supabase/migrations/: 202607160001_initial_backend.sql  202607160002_transcript_pipeline.sql  202607160003_course_recommendation_engine.sql
tests/: conftest.py  transcript-validator.test.ts  transfer-client.test.ts  transfer-outcome-service.test.ts
tests/adapters/: test_bellevue_equivalency.py
tests/api/: test_transfer_routes.py
tests/fixtures/: sample-transcript-extraction.json
tests/integration/: conftest.py  test_ap_ingestion.py  test_api.py  (+10 more)
(+197 files in other folders)
