[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-ingest"
version = "0.1.0"
description = "Evidence-preserving academic policy ingestion service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openai>=2,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "pypdf>=5,<7",
  "python-multipart>=0.0.20,<1",
  "PyYAML>=6,<7",
  "selectolax>=0.3,<1",
  "SQLAlchemy[asyncio]>=2.0,<3",
  "structlog>=25,<26",
  "supabase>=2.15,<3",
  "trafilatura>=2,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
documents = ["docling>=2,<3"]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
  "types-PyYAML>=6.0.12,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
academic_ingest = ["data/*.html"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
  "integration: offline integration test",
  "postgres: requires the local PostgreSQL service",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["academic_ingest"]
