[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathwise-course-recommendation"
version = "0.1.0"
description = "Deterministic prerequisite graph and course recommendation service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "networkx>=3.4,<4",
  "pydantic>=2.11,<3",
  "supabase>=2.15,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
