[project]
name = "pathwise-transcript-parser"
version = "0.1.0"
description = "Private PDF-to-structured-page service for transcript ingestion"
requires-python = ">=3.11,<3.13"
dependencies = [
  "docling>=2.58,<3",
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "pymupdf>=1.25,<2",
  "pypdf>=5.1,<6",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8.3,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
